Fix overflow issues in mobile

--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,6 @@
   text-align: center;
   display: flex;
   flex-direction: column;
-  height: 100%;
 }
 
 #app {
